# privdm-backend

./: Cargo.toml  Dockerfile  fly.toml
.sqlx/: query-1328eca56078ef655c355612653156464d1c86cff47ed7ae98a24b134e5e7abb.json  query-2233ce8f802e428ab96ceaf59ab1fb7d0f45cd2c62e12826de487949a66a0ec6.json  query-2f4dc41268d5ef432d023458360e72510d91d7a803c0a687997c43f1a60665da.json  query-405bbdd6b4f801cb604f2b829540e3a520294195d7b2ba65feb92943d882b08d.json  query-9a4d1de405f9fe98e1b2fa7ff4861c574287a4e993265633dd655b8b0f24ca22.json  query-cce8403fc9d1ab6e78904d2e1eb317d1021d07b6fa7c0d642797688907584b5b.json  query-cfc7f3b9f05924401e41cd5356ba2dbcf67fb6e123b7680e0bd3f884bf5615e2.json  query-d19fcc0ddf1d8b6602f3d6fa90c6872e4ee8f82c5425b219154b41aa9fb533c5.json  query-df0a808a49fa9445ab63a46e53318c0ebfb2bbdd4baddb7ff82f295bdad48b23.json  query-e4e24ff62f28ad007fad87d4d7e8017f49b7318067b677c4080f209d65b33168.json  query-f6b149abc2ffd91b9cc8c4acd3ec2680756a1164e08c0e3b67caba0e2813d344.json
src/: http.rs  jwt.rs  lib.rs  main.rs  user_struct.rs  websocket.rs
src/http/: user.rs
